--- a/linear_search.html
+++ b/linear_search.html
@@ -16,6 +16,7 @@
   <li><a href="html_folder/compressie.html">Compressie</a></li>
   <li><a href="linear_search.html">linear search</a></li>
   <li><a href="bubble_sort.html"> bubble sort</a></li>
+  <li><a href="binary_search.html"> binary search</a></li>
 </ul>
 
 <br>
