--- a/html_folder/binairstelsel.html
+++ b/html_folder/binairstelsel.html
@@ -16,7 +16,7 @@
   <li><a href="compressie.html">Compressie</a></li>
   <li><a href="../linear_search.html">linear search</a></li>
   <li><a href="../bubble_sort"> bubble sort</a></li>
-  <li><a href=".../binary_search.html"> binary search</a></li>
+  <li><a href="../binary_search.html"> binary search</a></li>
 </ul>
     
 <br>
