--- a/html_folder/binairstelsel.html
+++ b/html_folder/binairstelsel.html
@@ -14,9 +14,9 @@
   <li><a href="algemene_informatie.html">Algemene informatie</a></li>
   <li><a href="bestandsformaten.html">Bestandsformaten</a></li>
   <li><a href="compressie.html">Compressie</a></li>
-  <li><a href="../linear_search.html">linear search</a></li>
-  <li><a href="../bubble_sort"> bubble sort</a></li>
-  <li><a href="../binary_search.html"> binary search</a></li>
+  <li><a href="algoritmes_folder/linear_search.html">linear search</a></li>
+  <li><a href="algoritmes_folder/bubble_sort"> bubble sort</a></li>
+  <li><a href="algoritmes_folder/binary_search.html"> binary search</a></li>
 </ul>
     
 <br>
