--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <li><a href="html_folder/algemene_informatie.html">Algemene informatie</a></li>
   <li><a href="html_folder/bestandsformaten.html">Bestandsformaten</a></li>
   <li><a href="html_folder/compressie.html">Compressie</a></li>
-  <li><a href="linear_search.html">linear search</a></li>
-  <li><a href="bubble_sort.html"> bubble sort</a></li>
-  <li><a href="binary_search.html"> binary search</a></li>
+  <li><a href="algoritmes_folder/linear_search.html">linear search</a></li>
+  <li><a href="algoritmes_folder/bubble_sort.html"> bubble sort</a></li>
+  <li><a href="algoritmes_folder/binary_search.html"> binary search</a></li>
 </ul>
 
     <br>
