--- a/algoritmes_folder/binary_search.html
+++ b/algoritmes_folder/binary_search.html
@@ -7,7 +7,7 @@
     <body>
 
 <ul>
-  <li><a href="index.html">Homepage</a></li>
+  <li><a href="../index.html">Homepage</a></li>
   <li><a href="../html_folder/binairstelsel.html">Binair stelsel</a></li>
   <li><a href="../html_folder/kleurmodellen.html">Kleurmodellen</a></li>
   <li><a href="../html_folder/algemene_informatie.html">Algemene informatie</a></li>
