--- a/ceasercijfer.html
+++ b/ceasercijfer.html
@@ -9,6 +9,22 @@
 <ul>
   <li><a href="home.html">home</a></li>
 </ul>
+
+<br>
+<br>
+
+Mijn prachtige dagboek. <br>
+Mijn vrouw is niet heel veel beter dan ik had gehoopt. <br>
+Ik heb een mail gekregen van een bedrijf dat mij vraagt om <br>
+de tijd door te rijzen zodat ik spullen voor ze kan meenemen. <br>
+Hiervoor zou ik een medicijn krijgen voor mijn vrouw. <br>
+<br>
+
+Mijn prachtige dagboek. <br>
+Ik ben er vandaag weer achtergekomen waarom 4 mijn geluks nummer is! <br>
+Ik werd bijna overvallen, ik liep rond met mijn 4 kinderen en had 4 <br>
+tassen in mijn handen. Wat een geluk weer vandaag. <br>
+Als ik ooit iets zou moeten coderen dat weet ik welk cijfer ik zou gebruiken...
   
   </body>
 </html>
