--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
 <body>
 
 <ul>
-<li><a href="ceasercijfer.html">cijferlijst</a></li>
+<li><a href="ceasercijfer.html">dagboek</a></li>
   <li><a href="to-do-list.html">to do list</a></li>
 </ul>
 
