--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
     <meta charset="utf-8">
   </head>
   <body>
-<ul>
+<ul class="top-level-menu">
   <li><a href="index.html">Homepage</a></li>
-  <li><a href="html_folder/binairstelsel.html">Binair stelsel</a></li>
-  <li><a href="html_folder/kleurmodellen.html">Kleurmodellen</a></li>
-  <li><a href="html_folder/algemene_informatie.html">Algemene informatie</a></li>
-  <li><a href="html_folder/bestandsformaten.html">Bestandsformaten</a></li>
-  <li><a href="html_folder/compressie.html">Compressie</a></li>
+  <li>
+    <a href="html_folder">informatie</a>
+    <ul class="second-level-menu">
+      <li><a href="html_folder/binairstelsel.html">Binair stelsel</a></li>
+      <li><a href="html_folder/kleurmodellen.html">Kleurmodellen</a></li>
+      <li><a href="html_folder/algemene_informatie.html">Algemene informatie</a></li>
+      <li><a href="html_folder/bestandsformaten.html">Bestandsformaten</a></li>
+      <li><a href="html_folder/compressie.html">Compressie</a></li>
+    </ul>
+  </li>
+  <li>
+    <a href="algoritmes_folder">algoritmes</a>
   <li><a href="algoritmes_folder/linear_search.html">linear search</a></li>
   <li><a href="algoritmes_folder/bubble_sort.html"> bubble sort</a></li>
   <li><a href="algoritmes_folder/binary_search.html"> binary search</a></li>
