--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <ul class="top-level-menu">
   <li><a href="index.html">Homepage</a></li>
   <li>
-    <a href="html_folder">informatie</a>
+    <a href="#">informatie</a>
     <ul class="second-level-menu">
       <li><a href="html_folder/binairstelsel.html">Binair stelsel</a></li>
       <li><a href="html_folder/kleurmodellen.html">Kleurmodellen</a></li>
@@ -20,10 +20,12 @@
     </ul>
   </li>
   <li>
-    <a href="algoritmes_folder">algoritmes</a>
-  <li><a href="algoritmes_folder/linear_search.html">linear search</a></li>
-  <li><a href="algoritmes_folder/bubble_sort.html"> bubble sort</a></li>
-  <li><a href="algoritmes_folder/binary_search.html"> binary search</a></li>
+    <a href="#">algoritmes</a>
+    <ul class="second-level-menu">
+      <li><a href="algoritmes_folder/linear_search.html">linear search</a></li>
+      <li><a href="algoritmes_folder/bubble_sort.html"> bubble sort</a></li>
+      <li><a href="algoritmes_folder/binary_search.html"> binary search</a></li>
+    </ul>
 </ul>
 
     <br>
