--- a/html_folder/algemene_informatie.html
+++ b/html_folder/algemene_informatie.html
@@ -13,15 +13,21 @@
   <li>
     <a href="#">informatie</a>
     <ul class="second-level-menu">
-    <li><a href="binairstelsel">Binair stelsel</a></li>
-    <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
-    <li><a href="algemene_informatie.html">Algemene informatie</a></li>
-    <li><a href="bestandsformaten.html">Bestandsformaten</a></li>
-    <li><a href="compressie.html">Compressie</a></li>
-  
-  <li><a href="../algoritmes_folder/linear_search.html">linear search</a></li>
-  <li><a href="../algoritmes_folder/bubble_sort.html"> bubble sort</a></li>
-  <li><a href="../algoritmes_folder/binary_search.html"> binary search</a></li>
+      <li><a href="binairstelsel">Binair stelsel</a></li>
+      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+      <li><a href="algemene_informatie.html">Algemene informatie</a></li>
+      <li><a href="bestandsformaten.html">Bestandsformaten</a></li>
+      <li><a href="compressie.html">Compressie</a></li>
+    </ul>
+  </li>
+  <li>
+    <a href="#">algoritmes</a>
+    <ul class="second-level-menu">
+      <li><a href="../algoritmes_folder/linear_search.html">linear search</a></li>
+      <li><a href="../algoritmes_folder/bubble_sort.html"> bubble sort</a></li>
+      <li><a href="../algoritmes_folder/binary_search.html"> binary search</a></li>
+    </ul>
+  </li>
 </ul>
 
     <br>
