--- a/html_folder/binairstelsel.html
+++ b/html_folder/binairstelsel.html
@@ -7,8 +7,10 @@
     <meta charset="utf-8">
   </head>
   <body>
-<ul>
+<ul class="top-level-menu">
   <li><a href="../index.html">Homepage</a></li>
+  <li>
+    <a href="#">informatie</a>
   <li><a href="binairstelsel.html">Binair stelsel</a></li>
   <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
   <li><a href="algemene_informatie.html">Algemene informatie</a></li>
