--- a/html_folder/binairstelsel.html
+++ b/html_folder/binairstelsel.html
@@ -11,14 +11,22 @@
   <li><a href="../index.html">Homepage</a></li>
   <li>
     <a href="#">informatie</a>
-  <li><a href="binairstelsel.html">Binair stelsel</a></li>
-  <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
-  <li><a href="algemene_informatie.html">Algemene informatie</a></li>
-  <li><a href="bestandsformaten.html">Bestandsformaten</a></li>
-  <li><a href="compressie.html">Compressie</a></li>
-  <li><a href="../algoritmes_folder/linear_search.html">linear search</a></li>
-  <li><a href="../algoritmes_folder/bubble_sort"> bubble sort</a></li>
-  <li><a href="../algoritmes_folder/binary_search.html"> binary search</a></li>
+    <ul class="second-level-menu">
+      <li><a href="binairstelsel.html">Binair stelsel</a></li>
+      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+      <li><a href="algemene_informatie.html">Algemene informatie</a></li>
+      <li><a href="bestandsformaten.html">Bestandsformaten</a></li>
+      <li><a href="compressie.html">Compressie</a></li>
+    </ul>
+  </li>
+  <li>
+    <a href="#">algoritmes</a>
+    <ul class="second-level-menu">
+      <li><a href="../algoritmes_folder/linear_search.html">linear search</a></li>
+      <li><a href="../algoritmes_folder/bubble_sort"> bubble sort</a></li>
+      <li><a href="../algoritmes_folder/binary_search.html"> binary search</a></li>
+    </ul>
+  </li>
 </ul>
     
 <br>
