--- a/html_folder/compressie.html
+++ b/html_folder/compressie.html
@@ -8,16 +8,26 @@
   </head>
   <body>
 
-<ul> <!--de ul laat zien dat de lijst ongeorderd is-->
+<ul class="top-level-menu"> <!--de ul laat zien dat de lijst ongeorderd is-->
   <li><a href="../index.html">Homepage</a></li>
-  <li><a href="binairstelsel">Binair stelsel</a></li>
-  <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
-  <li><a href="algemene_informatie.html">Algemene informatie</a></li>
-  <li><a href="bestandsformaten.html">Bestandsformaten</a></li>
-  <li><a href="compressie.html">Compressie</a></li>
-  <li><a href="../algoritmes_folder/linear_search.html">linear search</a></li>
-  <li><a href="../algoritmes_folder/bubble_sort"> bubble sort</a></li>
-  <li><a href="../algoritmes_folder/binary_search.html"> binary search</a></li>
+  <li>
+    <a href="#">informatie</a>
+    <ul class="second-level-menu">
+      <li><a href="binairstelsel">Binair stelsel</a></li>
+      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+      <li><a href="algemene_informatie.html">Algemene informatie</a></li>
+      <li><a href="bestandsformaten.html">Bestandsformaten</a></li>
+      <li><a href="compressie.html">Compressie</a></li>
+    </ul>
+  </li>
+  <li>
+    <a href="#">algoritmes</a>
+    <ul class="second-level-menu">
+      <li><a href="../algoritmes_folder/linear_search.html">linear search</a></li>
+      <li><a href="../algoritmes_folder/bubble_sort"> bubble sort</a></li>
+      <li><a href="../algoritmes_folder/binary_search.html"> binary search</a></li>
+    </ul>
+  </li>
 </ul>
 
     <br>
