--- a/algoritmes_folder/bubble_sort.html
+++ b/algoritmes_folder/bubble_sort.html
@@ -6,13 +6,21 @@
     </head>
     <body>
 
-<ul>
+<ul class="top-level-menu">
   <li><a href="../index.html">Homepage</a></li>
-  <li><a href="../html_folder/binairstelsel.html">Binair stelsel</a></li>
-  <li><a href="../html_folder/kleurmodellen.html">Kleurmodellen</a></li>
-  <li><a href="../html_folder/algemene_informatie.html">Algemene informatie</a></li>
-  <li><a href="../html_folder/bestandsformaten.html">Bestandsformaten</a></li>
-  <li><a href="../html_folder/compressie.html">Compressie</a></li>
+  <li>
+    <a href="#">informatie</a>
+    <ul class="second-level-menu">
+        <li><a href="../html_folder/binairstelsel.html">Binair stelsel</a></li>
+        <li><a href="../html_folder/kleurmodellen.html">Kleurmodellen</a></li>
+        <li><a href="../html_folder/algemene_informatie.html">Algemene informatie</a></li>
+        <li><a href="../html_folder/bestandsformaten.html">Bestandsformaten</a></li>
+        <li><a href="../html_folder/compressie.html">Compressie</a></li>
+    </ul>
+</li>
+<li>
+    <a href="#">algoritmes</a>
+    <ul class="second"
   <li><a href="linear_search.html">linear search</a></li>
   <li><a href="bubble_sort.html">bubble sort</a></li>
   <li><a href="binary_search.html">binary search</a></li>
