--- a/algoritmes_folder/bubble_sort.html
+++ b/algoritmes_folder/bubble_sort.html
@@ -20,11 +20,13 @@
 </li>
 <li>
     <a href="#">algoritmes</a>
-    <ul class="second"
-  <li><a href="linear_search.html">linear search</a></li>
-  <li><a href="bubble_sort.html">bubble sort</a></li>
-  <li><a href="binary_search.html">binary search</a></li>
-</ul>
+    <ul class="second-level-menu">
+        <li><a href="linear_search.html">linear search</a></li>
+        <li><a href="bubble_sort.html">bubble sort</a></li>
+        <li><a href="binary_search.html">binary search</a></li>
+    </ul>
+    </li>
+    </ul>
        <br>
         <br>
         
