--- a/lagen_folder/fysieke_laag.html
+++ b/lagen_folder/fysieke_laag.html
@@ -2,28 +2,28 @@
 <html>
   <head>
     <title>het eerste begin </title>
-    <link rel="stylesheet" type="text/css" href="opmaak.css">
+    <link rel="stylesheet" type="text/css" href="../opmaak.css">
     <meta charset="utf-8">
   </head>
   <body>
 <ul class="top-level-menu">
-  <li><a href="index.html">Homepage</a></li>
+  <li><a href="../index.html">Homepage</a></li>
   <li>
     <a href="#">informatie</a>
     <ul class="second-level-menu">
-      <li><a href="html_folder/binairstelsel.html">Binair stelsel</a></li>
-      <li><a href="html_folder/kleurmodellen.html">Kleurmodellen</a></li>
-      <li><a href="html_folder/algemene_informatie.html">Algemene informatie</a></li>
-      <li><a href="html_folder/bestandsformaten.html">Bestandsformaten</a></li>
-      <li><a href="html_folder/compressie.html">Compressie</a></li>
+      <li><a href="../html_folder/binairstelsel.html">Binair stelsel</a></li>
+      <li><a href="../html_folder/kleurmodellen.html">Kleurmodellen</a></li>
+      <li><a href="../html_folder/algemene_informatie.html">Algemene informatie</a></li>
+      <li><a href="../html_folder/bestandsformaten.html">Bestandsformaten</a></li>
+      <li><a href="../html_folder/compressie.html">Compressie</a></li>
     </ul>
   </li>
   <li>
     <a href="#">algoritmes</a>
     <ul class="second-level-menu">
-      <li><a href="algoritmes_folder/linear_search.html">linear search</a></li>
-      <li><a href="algoritmes_folder/bubble_sort.html"> bubble sort</a></li>
-      <li><a href="algoritmes_folder/binary_search.html"> binary search</a></li>
+      <li><a href="../algoritmes_folder/linear_search.html">linear search</a></li>
+      <li><a href="../algoritmes_folder/bubble_sort.html"> bubble sort</a></li>
+      <li><a href="../algoritmes_folder/binary_search.html"> binary search</a></li>
     </ul>
   </li>  
 </ul>
