--- a/lagen_folder/fysieke_laag.html
+++ b/lagen_folder/fysieke_laag.html
@@ -28,6 +28,17 @@
   </li>  
 </ul>
 
+<br>
+<br>
+
+<H1>Wat is de fysieke laag</H1>
+De fysieke laag is de laag met alle hardwear van de computer <br>
+zoals het ROM en RAM geheugen, de processor en de CPU. <br>
+Op deze pagina zal ik meer vertellen over de onderdelen <br>
+van de fysieke laag.
+
+<br>
+<h1>het geheugen</h1>
 
     
 <footer>
