--- a/lagen_folder/fysieke_laag.html
+++ b/lagen_folder/fysieke_laag.html
@@ -32,10 +32,8 @@
 <br>
 
 <H1>Wat is de fysieke laag</H1>
-De fysieke laag is de laag met alle hardwear van de computer <br>
-zoals het ROM en RAM geheugen, de processor en de CPU. <br>
-Op deze pagina zal ik meer vertellen over de onderdelen <br>
-van de fysieke laag.
+De fysieke laag is de laag met alle hardwear van de computer zoals het ROM en RAM geheugen, <br>
+de processor en de CPU. Op deze pagina zal ik meer vertellen over de onderdelen van de fysieke laag.
 
 <br>
 <h1>het geheugen</h1>
