--- a/lagen_folder/fysieke_laag.html
+++ b/lagen_folder/fysieke_laag.html
@@ -34,9 +34,10 @@
 <H1>Wat is de fysieke laag</H1>
 De fysieke laag is de laag met alle hardwear van de computer zoals het ROM en RAM geheugen, <br>
 de processor en de CPU. Op deze pagina zal ik meer vertellen over de onderdelen van de fysieke laag.
-
 <br>
 <h1>het geheugen</h1>
+Het geheugen van een computer bestaat uit drie onderdelen: de ROM, de RAM en het permanent geheugen. <br>
+Het  RAM of random-acces memory is het 
 
     
 <footer>
