--- a/lagen_folder/fysieke_laag.html
+++ b/lagen_folder/fysieke_laag.html
@@ -37,7 +37,15 @@ de processor en de CPU. Op deze pagina zal ik meer vertellen over de onderdelen 
 <br>
 <h1>het geheugen</h1>
 Het geheugen van een computer bestaat uit drie onderdelen: de ROM, de RAM en het permanent geheugen. <br>
-Het  RAM of random-acces memory is het 
+Het  RAM of random-acces memory is het stuk geheugen dat de code bevat die je de computer geeft. Als je <br>
+meer RAM geheugen hebt zal de computer ook sneller de opdrachten kunnen uitvoeren die je hebt gegeven.<br>
+Het ROM of Read only memory is het stuk geheugen waarop de firmware van de computer staat. Het ROM wordt <br>
+gebruikt wanneer een computer een programma moet opslaan of als een programma bijna nooit hoeft worden <br>
+aangepast. Het ROM is significant langzamer dan het RAM <br>
+Het permanent geheugen is het stuk geheugen dat de gegevens van de computer kan bewaren ook al staat deze <br>
+uit. Meestal wordt het permanent geheugen gebruik als lange termijn geheugen.<br>
+<br>
+<h1>processor</h1>
 
     
 <footer>
