--- a/lagen_folder/fysieke_laag.html
+++ b/lagen_folder/fysieke_laag.html
@@ -43,9 +43,10 @@ Het ROM of Read only memory is het stuk geheugen waarop de firmware van de compu
 gebruikt wanneer een computer een programma moet opslaan of als een programma bijna nooit hoeft worden <br>
 aangepast. Het ROM is significant langzamer dan het RAM <br>
 Het permanent geheugen is het stuk geheugen dat de gegevens van de computer kan bewaren ook al staat deze <br>
-uit. Meestal wordt het permanent geheugen gebruik als lange termijn geheugen.<br>
+uit. Meestal wordt het permanent geheugen gebruikt als lange termijn geheugen.<br>
 <br>
 <h1>processor</h1>
+
 
     
 <footer>
