--- a/lagen_folder/fysieke_laag.html
+++ b/lagen_folder/fysieke_laag.html
@@ -46,7 +46,17 @@ Het permanent geheugen is het stuk geheugen dat de gegevens van de computer kan 
 uit. Meestal wordt het permanent geheugen gebruikt als lange termijn geheugen.<br>
 <br>
 <h1>processor</h1>
-
+De procesoor ook wel de CPU of Central processing unit genoemd is een stuk hardware van de computer dat de code <br>
+voor de computer controleert en uitvoert. De werking van een CPU bestaat uit vier fases: de ophaalfase, decodeerfase, <br>
+uitvoefase en opslagfase.<br>
+De ophaalfase is de fase waarin de CPU de code uit het RAM geheugen haalt en daarna wordt het in het instructieregister <br>
+geplaatst.<br>
+De decodeerfase is de fase waarin de CPU de opdracht die bestaat uit bits uitelkaar gehaald en er worden van de bits <br>
+getallen gemaakt waarmee de computer weet wat het moet doen. <br>
+De uitvoerfase is de fase waarin de CPU de getallen die zijn gemaakt bij de decodeerfase bij elkaar optelt en in een <br>
+tijdelijk stukje geheugen opgeslagen. <br>
+De opslag fase is de fase waarin de CPU luistert naar de leidingen. Als er een getal langs komt dan zal dat getal op <br>
+de plek komen van het berekende getal en het berekende getal gaat terug in de leidingen.
 
     
 <footer>
