--- a/lagen_folder/fysieke_laag.html
+++ b/lagen_folder/fysieke_laag.html
@@ -56,7 +56,11 @@ getallen gemaakt waarmee de computer weet wat het moet doen. <br>
 De uitvoerfase is de fase waarin de CPU de getallen die zijn gemaakt bij de decodeerfase bij elkaar optelt en in een <br>
 tijdelijk stukje geheugen opgeslagen. <br>
 De opslag fase is de fase waarin de CPU luistert naar de leidingen. Als er een getal langs komt dan zal dat getal op <br>
-de plek komen van het berekende getal en het berekende getal gaat terug in de leidingen.
+de plek komen van het berekende getal en het berekende getal gaat terug in de leidingen.<br>
+De snelheid van een CPU ligt aan de kloksnelheid. De kloksnelheid is de meting van hoeveel signalen de computer per <br>
+seconde afleest. Dit wordt aangeduid in hertz. Bijvoorbeeld 1Hz is dat een computer één signaal kan lezen per seconde.
+<br>
+
 
     
 <footer>
