--- a/lagen_folder/fysieke_laag.html
+++ b/lagen_folder/fysieke_laag.html
@@ -58,8 +58,11 @@ tijdelijk stukje geheugen opgeslagen. <br>
 De opslag fase is de fase waarin de CPU luistert naar de leidingen. Als er een getal langs komt dan zal dat getal op <br>
 de plek komen van het berekende getal en het berekende getal gaat terug in de leidingen.<br>
 De snelheid van een CPU ligt aan de kloksnelheid. De kloksnelheid is de meting van hoeveel signalen de computer per <br>
-seconde afleest. Dit wordt aangeduid in hertz. Bijvoorbeeld 1Hz is dat een computer één signaal kan lezen per seconde.
+seconde afleest. Dit wordt aangeduid in hertz. Bijvoorbeeld 1Hz is dat een computer één signaal kan lezen per seconde.<br>
+De snelheid van de rekenkunde van de computer wordt aangeduid met de verwerkingssnelheid. Deze wordt aangeduid in <br>
+instructies per seconde.
 <br>
+<h1>randapperatuur</h1>
 
 
     
