--- a/lagen_folder/fysieke_laag.html
+++ b/lagen_folder/fysieke_laag.html
@@ -63,7 +63,10 @@ De snelheid van de rekenkunde van de computer wordt aangeduid met de verwerkings
 instructies per seconde.
 <br>
 <h1>randapperatuur</h1>
-
+Randapperatuur zijn alle hardware die niet behoren tot het centrale netwerk, maar ernaast kunnen worden gebruikt <br>
+om de computer beter te laten werken. Er zijn verschillende vormen van waaronder: invoerapperatuur zoals een muis <br>
+of keyboard, uitvoerapperatuur zoals een speaker of een monitor, opslag zoals een harde schijf of een USB-stick <br>
+en specefieke apperatuur zoals een 3D printer of een TV ontvanger.
 
     
 <footer>
