--- a/lagen_folder/logische_laag.html
+++ b/lagen_folder/logische_laag.html
@@ -1,14 +1,13 @@
-
 <!DOCTYPE html>
 <html>
   <head>
     <title>het eerste begin </title>
-    <link rel="stylesheet" type="text/css" href="opmaak.css">
+    <link rel="stylesheet" type="text/css" href="../opmaak.css">
     <meta charset="utf-8">
   </head>
   <body>
 <ul class="top-level-menu">
-  <li><a href="index.html">Homepage</a></li>
+  <li><a href="../index.html">Homepage</a></li>
   <li>
     <a href="#">informatie</a>
     <ul class="second-level-menu">
@@ -23,7 +22,6 @@
     <a href="#">de drie lagen</a>
     <ul class="second-level-menu">
       <li><a href="lagen_folder/fysieke_laag.html">fysieke laag</a></li>
-      <li><a href="lagen_folder/logische_laag.html">logische laag</a></li>
     </ul>
   </li>
   <li>
@@ -36,20 +34,7 @@
   </li>  
 </ul>
 
-    <br>
-    <br>
-    Mijn naam is Roland uit H4A van het Vlietlandcollege <br>
-    en dit is de website die ik heb gemaakt voor informatica.
-    <br>
-   <H1>Waarom ik informatica heb gekozen</H1>
-   Ik heb informatica gekozen, omdat ik graag zou willen weten hoe ik kan <br>
-   programmeren zodat ik er later iets mee kan gaan doen. Het leuke aan informatica <br>
-   vind ik tot nu toe om te zien dat wat je zelf hebt gemaakt ook echt werkt als je <br>
-   het probeert te gebruiken.
-
-   <br>
-
-   <img src="plaatjes_folder/download.png" alt="onze school">
+<br>
     
 <footer>
   <div class="container">
