--- a/lagen_folder/logische_laag.html
+++ b/lagen_folder/logische_laag.html
@@ -11,11 +11,11 @@
   <li>
     <a href="#">informatie</a>
     <ul class="second-level-menu">
-      <li><a href="html_folder/binairstelsel.html">Binair stelsel</a></li>
-      <li><a href="html_folder/kleurmodellen.html">Kleurmodellen</a></li>
-      <li><a href="html_folder/algemene_informatie.html">Algemene informatie</a></li>
-      <li><a href="html_folder/bestandsformaten.html">Bestandsformaten</a></li>
-      <li><a href="html_folder/compressie.html">Compressie</a></li>
+      <li><a href="../html_folder/binairstelsel.html">Binair stelsel</a></li>
+      <li><a href="../html_folder/kleurmodellen.html">Kleurmodellen</a></li>
+      <li><a href="../html_folder/algemene_informatie.html">Algemene informatie</a></li>
+      <li><a href="../html_folder/bestandsformaten.html">Bestandsformaten</a></li>
+      <li><a href="../html_folder/compressie.html">Compressie</a></li>
     </ul>
   </li>
   <li>
@@ -27,9 +27,9 @@
   <li>
     <a href="#">algoritmes</a>
     <ul class="second-level-menu">
-      <li><a href="algoritmes_folder/linear_search.html">linear search</a></li>
-      <li><a href="algoritmes_folder/bubble_sort.html"> bubble sort</a></li>
-      <li><a href="algoritmes_folder/binary_search.html"> binary search</a></li>
+      <li><a href="../algoritmes_folder/linear_search.html">linear search</a></li>
+      <li><a href="../algoritmes_folder/bubble_sort.html"> bubble sort</a></li>
+      <li><a href="../algoritmes_folder/binary_search.html"> binary search</a></li>
     </ul>
   </li>  
 </ul>
