--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <ul class="second-level-menu">
       <li><a href="lagen_folder/fysieke_laag.html">fysieke laag</a></li>
       <li><a href="lagen_folder/logische_laag.html">logische laag</a></li>
+      <li><a href="lagen_folder/toepassingen_laag.html">toepassingen laag</a></li>
     </ul>
   </li>
   <li>
