--- a/lagen_folder/logische_laag.html
+++ b/lagen_folder/logische_laag.html
@@ -36,7 +36,18 @@
 
 <br>
 <h1>wat is de logische laag</h1>
-
+De logische laag is de laag waarin alle software zit zoals het operating system. <br>
+Op deze pagina zal ik wat meer vertellen over de onderdelen van de logische laag.
+<br>
+<h1>het OS</h1>
+Het OS of operating system is een programma dat na het opstarten van een computer <br>
+in het geheugen wordt geplaatst en al de hardware regelt. Voorbeelden van een OS <br>
+zijn bijvoorbeeld apple IOS, android of microsoft windows. Het Os staat meestal <br>
+op de harde schijf en wordt tijdens het opstarten dan geladen. Dit is erg handig <br>
+omdat de computer zo het OS op de nieuwste versie kan vervangen.
+<br>
+<h1>wat zijn de fucties van het OS</h1>
+Het OS heeft verschillende taken die het moet vervullen.
 
 <br>
     
