--- a/lagen_folder/logische_laag.html
+++ b/lagen_folder/logische_laag.html
@@ -47,7 +47,18 @@ op de harde schijf en wordt tijdens het opstarten dan geladen. Dit is erg handig
 omdat de computer zo het OS op de nieuwste versie kan vervangen.
 <br>
 <h1>wat zijn de fucties van het OS</h1>
-Het OS heeft verschillende taken die het moet vervullen.
+Het OS heeft verschillende taken die het moet vervullen.<br>
+als eerste moet het OS de computer opstarten en zorgen dat alle bestanden worden <br>
+geladen.<br>
+Ook moet het ervoor zorgen dat de actieve programma's toegang krijgen tot de <br>
+systeembronnen
+Daarnaast moet het zorgen dat alle actieve programma's een interface kunnen <br>
+weergeven. De meeste operating systems hebben zelf ook een interface zoals <br>
+Windows verkenner.<br>
+Het OS moet ervoor zorgen dat programma's kunnen worden aangezet. Het programma <br>
+dat moet worden gebruikt wordt overgeschreven naar het interne geheugen en de <br>
+CPU voert het dan uit.<br>
+verder moet het OS
 
 <br>
     
