--- a/lagen_folder/logische_laag.html
+++ b/lagen_folder/logische_laag.html
@@ -58,7 +58,12 @@ Windows verkenner.<br>
 Het OS moet ervoor zorgen dat programma's kunnen worden aangezet. Het programma <br>
 dat moet worden gebruikt wordt overgeschreven naar het interne geheugen en de <br>
 CPU voert het dan uit.<br>
-verder moet het OS
+verder moet het OS comuniceren met de randapperatuur op twee verschillende manieren <br>
+invoer: inkomende signalen van een muis of keyboard moeten goed verwerkt worden. <br>
+uitvoer: een beeldscherm of printer moeten de correcte instructies binnenkrijgen. <br>
+tevens moet het OS het geheugenbeheer waabij intern en extern geheugen beheren. <br>
+intern geheugen: gebruik van applicaties <br>
+extern geheugen: organisatie van bestanden.
 
 <br>
     
