--- a/lagen_folder/toepassingen_laag.html
+++ b/lagen_folder/toepassingen_laag.html
@@ -34,7 +34,32 @@
   </li>  
 </ul>
 
-    <br>
+<br>
+<h1>wat is de toepassingenlaag</h1>
+De toepassingenlaag is de laag waar de toepassing op staat waarvoor <br>
+de twee andere lagen samen werken zodat het kan werken. Hiertoe behoren <br>
+alle applicaties die op een computer staan.
+<br>
+<h1>Apps</h1>
+Apps of applicaties zijn programma's die bedoelt zijn voor de eindgebruiker <br>
+anders dan hardware of software runnen apps op de achtergrond. Apps runnen <br>
+op of onder een bepaalde OS. Sommige apps kunnen worden gebruikt op verschillende <br>
+OS en zijn daarom multiplatform. Elke app heeft een andere complexiteit het kan <br>
+uitlopen van simpel zoals games en tekseditors naar extreem complex zoals <br>
+luchtverkeers apps of digitaal bankieren.
+<br>
+<h1>API's</h1>   
+Een API of application programming interface is een programma meestal in de <br>
+vorm van een bibliotheek die ervoor zorgt dat een computerprogramma kan <br>
+communiceren met een ander programma. Een API zoorgt er bijvoorbeeld voor <br>
+dat een programma dat goed met abstractie kan werken veel meer met abstractie <br>
+werkt en het niet abstracte werk overlaat aan een ander programma dat dat veel <br>
+minder goed kan. Een voorbeeld hiervan is een tekenprogramma en een printer. <br>
+Het tekenprogramma weet niet hoe het een printer moet aansturen dus zorgt een <br>
+API ervoor dat het tekenprogramma dat ook niet hoeft te doen en zet een ander <br>
+programma hiervoor aan. 
+
+<br>
     
 <footer>
   <div class="container">
