--- a/lagen_folder/eigen_telefoon.html
+++ b/lagen_folder/eigen_telefoon.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -25,8 +24,6 @@
       <li><a href="lagen_folder/fysieke_laag.html">fysieke laag</a></li>
       <li><a href="lagen_folder/logische_laag.html">logische laag</a></li>
       <li><a href="lagen_folder/toepassingen_laag.html">toepassingen laag</a></li>
-      <li><a href="lagen_folder/eigen_telefoon.html"></a></li>
-      <li><a href="lagen_folder/eigen_onderwerp"></a></li>
     </ul>
   </li>
   <li>
@@ -39,21 +36,12 @@
   </li>  
 </ul>
 
-    <br>
-    <br>
-    Mijn naam is Roland uit H4A van het Vlietlandcollege <br>
-    en dit is de website die ik heb gemaakt voor informatica.
-    <br>
-   <H1>Waarom ik informatica heb gekozen</H1>
-   Ik heb informatica gekozen, omdat ik graag zou willen weten hoe ik kan <br>
-   programmeren zodat ik er later iets mee kan gaan doen. Het leuke aan informatica <br>
-   vind ik tot nu toe om te zien dat wat je zelf hebt gemaakt ook echt werkt als je <br>
-   het probeert te gebruiken.
+<br>
+
+   <img src="../plaatjes_folder/canvas.png" alt="mijn telefoon">
 
    <br>
-
-   <img src="plaatjes_folder/download.png" alt="onze school">
-    
+   
 <footer>
   <div class="container">
     <p>&copy ; 2023 school project</p>
