--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <li><a href="lagen_folder/fysieke_laag.html">fysieke laag</a></li>
       <li><a href="lagen_folder/logische_laag.html">logische laag</a></li>
       <li><a href="lagen_folder/toepassingen_laag.html">toepassingen laag</a></li>
-      <li><a href="lagen_folder/eigen_telefoon.html"></a></li>
-      <li><a href="lagen_folder/eigen_onderwerp"></a></li>
+      <li><a href="lagen_folder/eigen_telefoon.html">mijn telefoon</a></li>
+      <li><a href="lagen_folder/eigen_onderwerp">het moederbord</a></li>
     </ul>
   </li>
   <li>
