--- a/lagen_folder/eigen_onderwerp.html
+++ b/lagen_folder/eigen_onderwerp.html
@@ -35,6 +35,15 @@
     </ul>
   </li>  
 </ul>
+<h1>het moederbord</h1>
+Het moederbord is het onderdeel van de computer waar alle andere <br>
+onderdelen van de computer op staan. Er is plaats voor een CPU, BIOS, <br>
+de chipset, het werkgeheugen, connectoren, een geluids en netwerkkaart <br>
+en een videokaart. Een moederbord kan niet goed tegen statische elektriciteit <br>
+en als je een onderdeel zou aanraken zal je ontladen en zal het onderdeel dat <br>
+je hebt aangeraakt niet meer goed functioneren
+
+<img src="../plaatjes_folder/Computer-motherboard.jpg" alt="een moederbord">
     
 <footer>
   <div class="container">
