--- a/lagen_folder/fysieke_laag.html
+++ b/lagen_folder/fysieke_laag.html
@@ -68,6 +68,8 @@ om de computer beter te laten werken. Er zijn verschillende vormen van waaronder
 of keyboard, uitvoerapperatuur zoals een speaker of een monitor, opslag zoals een harde schijf of een USB-stick <br>
 en specefieke apperatuur zoals een 3D printer of een TV ontvanger.
 
+<img src="../plaatjes_folder/cpu.jpg" alt="een cpu">
+
     
 <footer>
   <div class="container">
