--- a/lagen_folder/logische_laag.html
+++ b/lagen_folder/logische_laag.html
@@ -65,6 +65,8 @@ tevens moet het OS het geheugenbeheer waabij intern en extern geheugen beheren. 
 intern geheugen: gebruik van applicaties <br>
 extern geheugen: organisatie van bestanden.
 
+<img src="../plaatjes_folder/images.jpeg" alt="een OS">
+
 <br>
     
 <footer>
