--- a/lagen_folder/toepassingen_laag.html
+++ b/lagen_folder/toepassingen_laag.html
@@ -59,6 +59,8 @@ Het tekenprogramma weet niet hoe het een printer moet aansturen dus zorgt een <b
 API ervoor dat het tekenprogramma dat ook niet hoeft te doen en zet een ander <br>
 programma hiervoor aan. 
 
+<img src="../plaatjes_folder/ilgmyzin-Xe21OFRpqvk-unsplash.jpg" alt="apps">
+
 <br>
     
 <footer>
