--- a/algoritmes_folder/bubble_sort.html
+++ b/algoritmes_folder/bubble_sort.html
@@ -19,6 +19,16 @@
     </ul>
 </li>
 <li>
+    <a href="#">de drie lagen</a>
+    <ul class="second-level-menu">
+      <li><a href="../lagen_folder/fysieke_laag.html">fysieke laag</a></li>
+      <li><a href="../lagen_folder/logische_laag.html">logische laag</a></li>
+      <li><a href="../lagen_folder/toepassingen_laag.html">toepassingen laag</a></li>
+      <li><a href="../lagen_folder/eigen_telefoon.html">mijn telefoon</a></li>
+      <li><a href="../lagen_folder/eigen_onderwerp">het moederbord</a></li>
+    </ul>
+  </li>
+<li>
     <a href="#">algoritmes</a>
     <ul class="second-level-menu">
         <li><a href="linear_search.html">linear search</a></li>
