--- a/lagen_folder/fysieke_laag.html
+++ b/lagen_folder/fysieke_laag.html
@@ -19,6 +19,16 @@
     </ul>
   </li>
   <li>
+    <a href="#">de drie lagen</a>
+    <ul class="second-level-menu">
+      <li><a href="fysieke_laag.html">fysieke laag</a></li>
+      <li><a href="logische_laag.html">logische laag</a></li>
+      <li><a href="toepassingen_laag.html">toepassingen laag</a></li>
+      <li><a href="eigen_telefoon.html">mijn telefoon</a></li>
+      <li><a href="eigen_onderwerp">het moederbord</a></li>
+    </ul>
+  </li>
+  <li>
     <a href="#">algoritmes</a>
     <ul class="second-level-menu">
       <li><a href="../algoritmes_folder/linear_search.html">linear search</a></li>
