--- a/lagen_folder/logische_laag.html
+++ b/lagen_folder/logische_laag.html
@@ -22,6 +22,10 @@
     <a href="#">de drie lagen</a>
     <ul class="second-level-menu">
       <li><a href="fysieke_laag.html">fysieke laag</a></li>
+      <li><a href="logische_laag.html">logische laag</a></li>
+      <li><a href="toepassingen_laag.html">toepassingen laag</a></li>
+      <li><a href="eigen_telefoon.html">mijn telefoon</a></li>
+      <li><a href="eigen_onderwerp">het moederbord</a></li>
     </ul>
   </li>
   <li>
